--- a/index.html
+++ b/index.html
@@ -1,21 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Team Vacation Tracker</title>
-    <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-    <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-        .sticky { position: sticky; }
-        .z-10 { z-index: 10; }
-    </style>
+    <title>Test Page</title>
 </head>
 <body>
-    <div id="root"></div>
-    <script type="text/babel" src="app.js"></script>
+    <h1>GitHub Pages is Working!</h1>
+    <p>If you can see this, the deployment is successful.</p>
+    <button onclick="alert('JavaScript works!')">Test JavaScript</button>
 </body>
 </html>
