--- a/index.html
+++ b/index.html
@@ -1,24 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IT Sup och Ops Vacay</title>
     <script src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        .sticky { position: sticky; }
+        .z-10 { z-index: 10; }
+    </style>
 </head>
-<body style="background: #111827; color: white; margin: 0;">
+<body>
     <div id="root"></div>
     <script>
-        const { useState } = React;
-        const VacationTracker = () => {
-            return React.createElement('div', { 
-                style: { padding: '20px', textAlign: 'center' }
-            }, 
-                React.createElement('h1', null, 'IT Sup och Ops Vacay'),
-                React.createElement('p', null, 'App is loading...')
-            );
-        };
-        ReactDOM.render(React.createElement(VacationTracker), document.getElementById('root'));
-    </script>
-</body>
-</html>
+        // Put your app.js content directly here for now
+        console.log("Loading vacation tracker...");
+        
+        // Simple test first
+        const App = () => {
+            return React.createElement('div', {
+                className: 'min-h-screen bg-gray-900 text-white p-6'
+            },
+                React.createElement
